# test

./: __main__.py  add.css  add.html  add.js  additionally.html  additionally.js  alembic.ini  data.json  db.sqlite  index.css  index.html  index.js  main.py  messages.json  package-lock.json  package.json  pyproject.toml  server.js  statistic.py  user_ids.json
migrations/: env.py
migrations/versions/: 007846955171_.py
page/: add.html  additionally.html  task.html
scripts/: add.js  additionally.js  index.js  start.js
src/: config.py  main.py
src/bot/: bot.py
src/bot/handlers/admin/: __init__.py  sender.py
src/bot/handlers/user/: __init__.py  basic.py
src/bot/keyboards/: inine.py
src/bot/middlewares/: db_middleware.py
src/bot/states/: send_states.py
src/sql/: models.py
src/sql/repo/: __init__.py  user_repo.py
src/static/: data.json  settings.json  user_ids.json
src/web/: start.html
src/web/page/: additionally.html  task.html
src/web/scripts/: add.js  start.js
src/web/styles/: add.css  index.css  task.css
styles/: add.css  index.css  task.css
